cod-tools (unreleased)

  * Changed:
    - clarified option descriptions of the 'cif2cod' script.
    - sdf_add_cod_data:
        - update the script to replace Unicode whitespace symbols with regular
          spaces.
        - improved the handling of incorrectly looped chemical names.
  * Fixed:
    - updated the the ./tools/mkdiffdepend script to read the input file list
      from STDIN when no filenames are provided as command-line arguments.
    - COD::CIF::Unicode2CIF:
       - fixed the decoding of accented characters sequences that consists of
         a base character encoded as a numeric character reference and a single
         combining character encoded as a CIF special code.
    - cif.c:
       - updated the datablock_print_tag_values() function to only assign
         buffer space for an additional separator if the data block name
         is actually provided.

cod-tools (3.9.0)

  * Added:
    - cif_set_value:
        - the '--add-tag' option.
    - cif_split:
        - the '--uniquify-file-names' option.
    - cif_mark_disorder:
        - the '--reconstruct-symmetry' and '--uniquify-atoms' options as well
          as their negations. These options allow to optionally restore the
          full unit cell before carrying out the disorder site detection.
        - the '--die-on-errors', '--die-on-warnings', '--die-on-notes' options
          and their negations.
    - the COD::CIF::Data::MarkDisorder module.
    - COD::CIF::Tags::DictTags:
        - added data names from the 'cif_iucr.dic' dictionary version 1.2 to
          the global '@tag_list' variable.
  * Changed:
    - COD::CIF::Data::CIF2COD:
        - added 'sgNumber' to the list of default data fields.
    - COD::CIF::DDL:
        - started setting data item '_units.code' value 'none' for data items
          without explicit units.
        - implemented partial handling of the '_list_reference' data item in
          the ddl1_to_ddlm() subroutine.