@@ -1,0 +1,15 @@
+#!/bin/sh
+
+sudo dnf install -y \
+    bison \
+    cmake \
+    libnauty-devel \
+    make \
+    patch \
+    perl-devel \
+    perl-Module-ScanDeps \
+    perl-Parse-Yapp \
+    python3-devel \
+    redhat-rpm-config \
+    swig \
+;
