@@ -1,0 +1,5 @@
+#!/bin/sh
+
+$(dirname $0)/build.sh
+$(dirname $0)/run.sh
+$(dirname $0)/test.sh
