@@ -1,0 +1,7 @@
+#!/bin/sh
+
+sudo dnf install -y \
+    perl-Test-More-UTF8 \
+    perl-Text-Diff \
+    perl-FindBin \
+;
