@@ -1,5 +1,7 @@
 cod-tools (unreleased)
 
+  * Added:
+    - dependency installer for Fedora 40.
   * Changed:
     - clarified option descriptions of the 'cif2cod' script.
     - sdf_add_cod_data:
